--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#045159" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <link rel="icon" type="image/svg+xml" href="/icon_home.png" />
+    <link rel="apple-touch-icon" href="/icon_home.png" sizes="180x180">
+    <link rel="mask-icon" href="/icon_home.png" color="#FFFFFF">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SickChip</title>
   </head>
